--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="contact.html" class="bon">Contact</a>
         </li>
       </ul><!-- you can use these buttons to choose pages -->
-<img src="pic/person.jpg"
+<img src="pic/me.jpg"
      alt="photograph"
      class="photo">
    </main><!-- a fictitious photo -->
